k8s/angular-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: gitops.local
    http:
      paths:
      - path: /api/python(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-api-service
            port:
              number: 8000
      - path: /api/java(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: java-api-service
            port:
              number: 8080
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-app-service
            port:
              number: 80
